--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,3 @@
-=== Version 0.1.0
+=== Version 0.1.0 / 2010-04-03
 
 First release of WatiRspec, a small library for combining Watir and RSpec for browser-based functional testing in Ruby.
