--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.1.4 / 2010-04-06
+
+ * added dependency for win32screenshot
+
 === Version 0.1.3 / 2010-04-06
 
  * fixed a bug where inner table was not shown with Watir::Table#to_a when it was not a direct child, but some other element was in between for example form, span, div etc.
