--- a/README.rdoc
+++ b/README.rdoc
@@ -162,7 +162,7 @@ From now on, add all common functionality into ui-test-common/lib
 
 == KNOWN PROBLEMS (& SOLUTIONS)
 
-= PROBLEM #1
+=== PROBLEM #1
 
 If you see the following error message when running watirspec:
     R6034. An application has made an attempt to load the C runtime library incorrectly.
