--- a/README.rdoc
+++ b/README.rdoc
@@ -35,7 +35,7 @@ testing right away!
 
 == SYNOPSIS:
 
-  Without WatirSplash:
+=== Without WatirSplash:
     require 'watir'
     require 'spec'
 
@@ -66,7 +66,7 @@ testing right away!
 
 
 
-  With WatirSplash:
+=== With WatirSplash:
     describe "Google" do
         before :all do
             goto "http://google.com"
@@ -101,7 +101,7 @@ testing right away!
 * install Ruby 1.8.6:
     http://rubyinstaller.org/
     
-* install ImageMagick with rmagick-win32 for saving the screenshots in PNG format:
+* install ImageMagick with rmagick-win32 gem for saving the screenshots in PNG format:
     http://rubyforge.org/frs/?group_id=12&release_id=42049
 
 * install WatirSplash:
