--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.2.7 / 2010-09-27
+
+ * added explicit dependencies for Watir 1.6.5 and RSpec 1.3.0 so upcoming versions wouldn't break things accidentally
+
 === Version 0.2.6 / 2010-09-12
 
  * moved a lot of documentation from the README to the wiki at http://github.com/jarmo/watirsplash/wiki
