--- a/History.rdoc
+++ b/History.rdoc
@@ -1,6 +1,6 @@
 === Version 0.2.10 / 2010-10-14
 
- * Added Watir 1.6.6 dependency
+ * fixed Watir 1.6.6 dependency
 
 === Version 0.2.9 / 2010-10-14
 
