--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.2.11 / 2010-10-15
+
+ * fix integration with RAutomation - uninstall all versions of Watir before installing this version of WatirSplash due to the conflicts of Watir's AutoIt version and RAutomation AutoIt version
+
 === Version 0.2.10 / 2010-10-14
 
  * fixed Watir 1.6.6 dependency
