--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.2.12 / 2010-10-15
+
+ * really fix integration with RAutomation and AutoIt - uninstall all versions of Watir before installing this version of WatirSplash due to the conflicts of Watir's AutoIt version and RAutomation AutoIt version
+
 === Version 0.2.11 / 2010-10-15
 
  * fix integration with RAutomation - uninstall all versions of Watir before installing this version of WatirSplash due to the conflicts of Watir's AutoIt version and RAutomation AutoIt version
