added wiki link to History.rdoc

--- a/History.rdoc
+++ b/History.rdoc
@@ -1,7 +1,7 @@
 === Version 1.2.0 / 2011-04-16
 
  * fixed Watir::Browser#attach for Watir::IE
- * added #in(timeout) method for all RSpec matchers
+ * added #in(timeout) method for all RSpec matchers (read more about it on the wiki https://github.com/jarmo/WatirSplash/wiki/RSpec-Features)
  * added #make as an alias for #change as a RSpec matcher
  * bump watir/firewatir dependency to 1.8.1
  * bump watir-webdriver dependency to 0.2.2
