--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,8 @@
+=== Version 1.3.0 / 2011-04-22
+
+ * handle RSpec's #should_not correctly when using #in(timeout)
+ * added #soon for RSpec's matcher as an alias for #in(30)
+
 === Version 1.2.1 / 2011-04-17
 
  * use RSpec's multiple formatters support functionality directly
