--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,8 @@
+=== Version 1.4.0 / 2011-04-30
+
+ * deprecated #in(timeout) method - use #within(timeout) instead
+ * added #seconds/#second and #minutes/#minute method to RSpec matchers for making it possible to use them together with #within(timeout) method
+
 === Version 1.3.0 / 2011-04-22
 
  * handle RSpec's #should_not correctly when using #in(timeout)
