--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,8 @@
+=== Version 1.4.1 / 2011-06-01
+
+ * bump rspec dependency to 2.6.0
+ * bump watir-webdriver dependency to 0.2.3
+
 === Version 1.4.0 / 2011-04-30
 
  * deprecated #in(timeout) method - use #within(timeout) instead
