--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 1.4.3 / 2011-06-05
+
+ * fix #change matcher in conjunction with #within for rspec 2.6.0
+
 === Version 1.4.2 / 2011-06-01
 
  * handle correctly RSpec shared examples by html formatter
